@@ -14,30 +14,21 @@ import com.google.common.io.Resources;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.io.IOException;
 import java.lang.reflect.Constructor;
-import java.net.URI;
 import java.net.URL;
 import java.net.URLClassLoader;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 
 public class ModuleManager implements Initialisable {
     private static final Logger LOGGER = LoggerFactory.getLogger(ModuleManager.class.getName());
-
-    /** Core plugin class names loaded reflectively to avoid compile-time coupling to plugin subprojects. */
-    private static final String[] CORE_MODULE_CLASS_NAMES = {
-        "com.cometproject.game.groups.GroupsModule",
-        "com.cometproject.gamecenter.fastfood.FastFoodModule",
-        "com.cometproject.game.rooms.RoomsModule"
-    };
-
     private static ModuleManager moduleManagerInstance;
-    private final EventHandler eventHandler;
-    private final CometGameService gameService;
+    private EventHandler eventHandler;
+    private CometGameService gameService;
 
     private Map<String, BaseModule> modules;
 
@@ -64,57 +55,61 @@ public class ModuleManager implements Initialisable {
 
         ModuleManager.getInstance().getEventHandler().initialize();
 
-        for (String className : CORE_MODULE_CLASS_NAMES) {
-            this.loadCoreModule(className);
-        }
-    }
-
-    @SuppressWarnings("unchecked")
-    private void loadCoreModule(String className) {
-        try {
-            Class<? extends BaseModule> moduleClass =
-                (Class<? extends BaseModule>) Class.forName(className).asSubclass(BaseModule.class);
-            Constructor<? extends BaseModule> ctor = moduleClass.getConstructor(ModuleConfig.class, IGameService.class);
-            BaseModule cometModule = ctor.newInstance(null, this.gameService);
-            cometModule.loadModule();
-            this.modules.put(moduleClass.getSimpleName(), cometModule);
-        } catch (Exception e) {
-            LOGGER.error("Failed to load system module: " + className, e);
-        }
+        this.loadModules();
     }
 
     public void setupModules() {
         for (BaseModule baseModule : this.modules.values()) {
             baseModule.setup();
+
             baseModule.initialiseServices(GameContext.getCurrent());
         }
     }
 
     private List<CometModule> loadModules() {
+        final ModulesConfig modulesConfig;
+
         try {
-            final String json = new String(Files.readAllBytes(Paths.get("./config/modules.json")));
-            final ModulesConfig modulesConfig = JsonUtil.getInstance().fromJson(json, ModulesConfig.class);
-            final List<CometModule> cometModules = Lists.newArrayList();
-
-            for (CometModule module : modulesConfig.getModules()) {
-                try {
-                    loadModule(module);
-                    cometModules.add(module);
-                } catch (Exception e) {
-                    LOGGER.error("Failed to load module: " + module.getAlias(), e);
-                }
-            }
-
-            return cometModules;
-        } catch (IOException e) {
-            LOGGER.error("Failed to read modules.json", e);
+            final String json = Files.readString(Path.of("./config/modules.json"), StandardCharsets.UTF_8);
+            modulesConfig = JsonUtil.getInstance().fromJson(json, ModulesConfig.class);
+        } catch (Exception e) {
+            LOGGER.error("Failed to load modules configuration", e);
             return Lists.newArrayList();
         }
+
+        final List<CometModule> cometModules = Lists.newArrayList();
+
+        for (CometModule module : modulesConfig.getModules()) {
+            try {
+                loadModule(module);
+                cometModules.add(module);
+            } catch (Exception e) {
+                LOGGER.error("Failed to load module: " + module.getAlias(), e);
+            }
+        }
+
+        return cometModules;
     }
+//
+//    private List<String> findModules() {
+//       List<String> results = new ArrayList<>();
+//
+//        File[] files = new File("./modules").listFiles();
+//
+//        if (files == null) return results;
+//
+//        for (File file : files) {
+//            if (file.isFile() && file.getName().endsWith(".jar")) {
+//                results.add(file.getName());
+//            }
+//        }
+//
+//        return results;
+//    }
 
     private void loadModule(CometModule module) throws Exception {
         URLClassLoader loader = URLClassLoader.newInstance(
-                new URL[]{URI.create("jar:file:" + module.getPath() + "!/").toURL()},
+                new URL[]{new URL("jar:file:" + module.getPath() + "!/")},
                 getClass().getClassLoader()
         );
 
@@ -122,13 +117,13 @@ public class ModuleManager implements Initialisable {
 
         if (configJsonLocation == null) throw new Exception("module.json does not exist");
 
-        final ModuleConfig moduleConfig = JsonUtil.getInstance().fromJson(
-                Resources.toString(configJsonLocation, Charsets.UTF_8), ModuleConfig.class);
+        final ModuleConfig moduleConfig = JsonUtil.getInstance().fromJson(Resources.toString(configJsonLocation, Charsets.UTF_8), ModuleConfig.class);
 
         if (this.modules.containsKey(moduleConfig.getName())) {
             if (!this.modules.get(moduleConfig.getName()).getConfig().getVersion().equals(moduleConfig.getVersion())) {
                 LOGGER.warn("Modules with same name but different version was detected: " + moduleConfig.getName());
             }
+
             return;
         }
 
@@ -139,9 +134,13 @@ public class ModuleManager implements Initialisable {
         Constructor<? extends BaseModule> ctor = runClass.getConstructor(ModuleConfig.class, IGameService.class);
 
         BaseModule cometModule = ctor.newInstance(moduleConfig, this.gameService);
+
         cometModule.loadModule();
+
         module.setClassLoader(loader);
         this.modules.put(moduleConfig.getName(), cometModule);
+
+        //loader.close();
     }
 
     public EventHandler getEventHandler() {
